# reliquary-ledger

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.validator-lite  README.md  SECURITY.md  START_HERE.md  docker-compose.validator-lite.yml  docker-compose.yml  env.example  env.testnet.example  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: cpu-ci.yml  docker-ghcr-publish-lite.yml  docker-ghcr-publish.yml  gpu-smoke.yml
dashboard/: index.html
dashboard/public/: index.html
deploy/: activate-testnet.sh  apply-audit-profile.sh  apply-chain-endpoint-profile.sh  apply-local-storage-profile.sh  apply-mainnet-sn81-profile.sh  apply-monitoring-profile.sh  apply-r2-profile.sh  apply-rtx-real-model-profile.sh  bootstrap-node.sh  bootstrap-persistent.sh  create-wallet.sh  install-environment.sh  install-monitoring.sh  mirror-r2-state-to-local.sh  publish-audit-index.sh  real-model-readonly-smoke.sh  register-hotkeys.sh  register-test-subnet.sh  runtime-health.sh  runtime-status.sh  smoke-inference.sh  testnet-readonly-smoke.sh  testnet-status.sh  write-service-envs.sh
deploy/mainnet/: sn81.env.template
deploy/monitoring/: docker-compose.monitoring.yml
deploy/scripts/: README.md  activate-closed-loop.md  deploy-staging-validator.sh  enable-mixed-task-source.sh
docker/: docker-compose.watchtower.yml  entrypoint.sh
docs/: architecture.md  audit.md  benchmarks.md  cutover-dry-run-2026-04-29.md  dashboard.md  deploy-snippet.md  deployment.md  faq.md  governance-charter.md  incentive.md  launch-config.md  mainnet-cutover-checklist.md  mainnet-readiness-2026-04-28.md  mainnet-readiness-2026-05-03.md  miner-quickstart.md  monitoring.md  overview.md  protocol.md  readiness-review.md  release-checklist.md  review-findings.md  runbook-mainnet.md  runbook-rollback.md  scoring.md  showcase-2026-04-29.md  status.md  validator-lite-quickstart.md  validator-quickstart.md
reliquary_inference/: audit.py  audit_harness.py  cli.py  config.py  constants.py  cross_gpu_audit.py  metrics.py  status.py
scripts/: bootstrap_testnet_subnet.py  launch_miner.sh  launch_validator.sh  run_policy_consumer_live.py  setup_remote_box.sh  upload_public_status.sh
tests/: test_audit.py  test_audit_harness.py  test_audit_harness_checkpointing.py  test_batched_verify.py  test_chain_adapter.py  test_chain_cache.py  test_chain_retry.py  test_chain_set_weights_with_retry.py  test_cli.py  test_closed_loop_e2e.py  test_cooldown.py  test_copycat_directional.py  test_cross_gpu_audit.py  test_crypto.py  test_distribution_and_logprob_stages.py  test_flash_attention_required.py  test_gsm8k_task_source.py  test_health.py  test_health_server.py  test_math_holdout.py  test_math_task_source.py  test_merkle_commit.py  test_mesh_integration.py  test_mesh_observability.py  test_metrics.py  test_miner_scoreboard.py  test_model_bundle_cache.py  test_monitoring_stack.py  test_multisig.py  test_observability_tracing.py  test_operational_constants.py  test_optimized_miner.py  test_policy_applier.py  test_policy_consumer.py  test_proof_adversarial.py  test_proof_constants.py  test_proof_determinism.py  test_proof_golden_vectors.py  test_proof_tolerance.py  test_protocol_properties.py  (+31 more)
(+118 files in other folders)
