[project]
name = "reliquary-inference"
version = "0.1.0"
description = "Inference-only proof-carrying Bittensor subnet scaffold"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "aiobotocore>=2.13.1",
  "bittensor>=9.12.1",
  "bittensor-wallet>=4.0.0",
  "datasets>=2.20.0",
  "numpy>=1.26.0",
  "pyarrow>=16.1.0",
  "rich>=13.7.1",
  "safetensors>=0.4.3",
  "torch>=2.4.0",
  "transformers>=4.52.0",
  "typer>=0.12.3",
]

[project.urls]
Homepage = "https://github.com/0xgrizz/reliquary-inference"
Repository = "https://github.com/0xgrizz/reliquary-inference"
Issues = "https://github.com/0xgrizz/reliquary-inference/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "hypothesis>=6.100.0",
]
gpu = [
  "vllm>=0.8.5",
]
tracing = [
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
]
protocol = [
  "reliquary-protocol>=0.1.0",
]

[project.scripts]
reliquary-inference = "reliquary_inference.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
